# portfolio

Climate Risk and Age Rule/climate-risk/: app.R
Data Communication/Accessible Data Visualizations/: ae-11-accessible-viz.qmd
Data Communication/Design and Details/: hw-04.Rproj
Data Communication/Prefresher R/: pyproject.toml
Exploring Coffee Taste Tests/: DESCRIPTION  ae-09-eda-coffee-py.html  ae-09-eda-coffee-py.qmd
Geoms/: ae-03-geoms.qmd
Housing Market at a Glance/: index.qmd
Prefresher/: hw-01-prefresher.qmd  hw-01.Rproj
Take a Sad Plot and Make It Better/: ae-06-sad-plot.qmd
Using Interactivity for Data Communication/: hw-06-interaction.qmd
Visualization and Wrangling/: hw-03-wrangle.qmd
ae-02-prv25/: ae-02-lollipop.qmd  ae-02.Rproj
ae-03-prv25/: ae-03.Rproj
ae-04-prv25/: ae-04-scales-guides.qmd
ae-05-prv25/: ae-05-waffle-chart.qmd
ae-07-prv25/: ae-07-ivy-judges.qmd
ae-09-prv25/: ae-09-eda-coffee-r.qmd
ae-11-prv25/: ae-11-accessible-viz.html  ae-11.Rproj
ae-15-prv25/: ae-15-colorspace.qmd
ae-16-prv25/: ae-16-ggmaps.qmd
ae-19-prv25/: ae-19-rental-burden.qmd
hw-00-prv25/: hw-00-prefresher-py.qmd  hw-00-prefresher-r.qmd
hw-04-prv25/: hw-04-design.qmd
hw-05-prv25/: hw-05-design-maps.qmd
hw-06-prv25/: DESCRIPTION  _quarto.yml  animate.qmd  dashboard.qmd  hw-06.Rproj
proj-01-giving-cap/: index.qmd  proposal.qmd
proj-01-giving-clapback/: presentation.qmd  proj-01.Rproj
proj-01-giving-vibe/: index.qmd  presentation.qmd  proj-01.Rproj
proj-02-giving-hedgehog/: app.R
proj-02-giving-leopard/: proj-02.Rproj  proposal.qmd
(+84 files in other folders)
